Some timemap improvments

--- a/todo.txt
+++ b/todo.txt
@@ -3,5 +3,5 @@
 - disable jumping to the current time, I think it breaks things
 - make something graphically pleasing when the start delay is happening
 
-- improve time-mini-map
 - make the gun a MeshPhongMaterial with envMap for shinynesss
+- mark killer waves in timemap
